--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!--Imagem-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente! Faça login pra acessar sua conta e poder fazer as configurações do seu ambiente</p>
+                <p>Seja bem-vindo(a) novamente! Faça login pra acessar sua conta e poder fazer as configurações do seu ambiente.</p>
             </div>
         </section>
     </main>
