--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
 <body>
     <main>
@@ -16,6 +17,23 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente! Faça login pra acessar sua conta e poder fazer as configurações do seu ambiente.</p>
+                <form action="login.php" method="post">
+                    <div id="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="E-mail" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div id="campo">
+                        <span class="material-symbols-outlined">key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Senha" required minlength="8" maxlength="16">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        Esqueci a senha
+                        <span class="material-symbols-outlined">mail</span>
+                    </a>
+                </form>
             </div>
         </section>
     </main>
