--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente! Faça login pra acessar sua conta e poder fazer as configurações do seu ambiente.</p>
                 <form action="login.php" method="post">
-                    <div id="campo">
-                        <span class="material-symbols-outlined">person</span>
+                    <div class="campo">
+                        <span class="material-symbols-outlined" class="icone">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="E-mail" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
-                    <div id="campo">
-                        <span class="material-symbols-outlined">key</span>
+                    <div class="campo">
+                        <span class="material-symbols-outlined" class="icones">key</span>
                         <input type="password" name="senha" id="isenha" placeholder="Senha" required minlength="8" maxlength="16">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha
                         <span class="material-symbols-outlined">mail</span>
                     </a>
