--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente! Faça login pra acessar sua conta e poder fazer as configurações do seu ambiente.</p>
+                <p>Seja bem-vindo(a) novamente.</p>
                 <form action="login.php" method="post">
                     <div class="campo">
                         <span class="material-symbols-outlined" class="icone">person</span>
@@ -30,8 +30,7 @@
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html" class="botao">
-                        Esqueci a senha
-                        <span class="material-symbols-outlined">mail</span>
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
             </div>
